--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,6 +1,8 @@
 .input {
     border-radius: var(--main-border-radius);
     margin-bottom: 1rem;
+    width: 500px;
+    height: 50px;
 }
 
 .button {
@@ -13,8 +15,9 @@
     box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
     cursor: pointer;
     line-height: initial;
-    width: 100%;
+    width: 30%;
     height: 38px;
+    align-items: center;
 }
 
 .button:hover {
@@ -22,4 +25,19 @@
     -webkit-transform: scale(0.95);
     -ms-transform: scale(0.95);
     transform: scale(0.95);
+}
+
+@media only screen and (max-width: 615px){
+    .input{
+        width: 350px !important;
+    }
+}
+
+@media only screen and (max-width: 420px){
+    .input{
+        width: 250px !important;
+    }
+    .button{
+        width: 250px !important;
+    }
 }
