--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -4,9 +4,14 @@
     justify-content: center;
     margin: 0 auto;
     border-radius: var(--main-border-radius);
-    -webkit-box-shadow: 0 0 24px 7px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0 24px 7px rgba(0, 0, 0, 0.2);
-    background-color: var(--bg-color--card);
+    -webkit-box-shadow: inset -5px -5px 250px rgba(255, 255, 255, 0.02);
+    box-shadow: inset -5px -5px 250px rgba(255, 255, 255, 0.02);
+    background: radial-gradient(140% 140% at 0% 0%, 
+    rgba(255,255,255, 0.4) 0%,
+    rgba(255,255,255, 0)) 100%;
+    border-top: 1px solid #eeeded70;
+    border-left: 1px solid #eeeded70;
+    backdrop-filter: blur(30px);
     color: var(--main-text-color);
     width: 85%;
     max-width: 675px;
