--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,45 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700,900&display=swap');
-
+/* #343d4b */
 :root {
     --gradient: linear-gradient(135deg, #72edf2 10%, #5151e5 100%);
-    --bg-color: #343d4b;
+    --bg-color: #050f2c;
     --bg-color--card: #222831;
 
     --main-text-color: #ffffff;
 
-    --main-border-radius: 25px;
+    --main-border-radius: 12px;
     --secondary-border-radius: 15px;
 }
 
 body {
+    position: relative;
     width: 100%;
     height: 100vh;
     font-family: 'Montserrat', sans-serif;
     background-color: var(--bg-color);
     color: var(--main-text-color);
+}
+
+body::before{
+    z-index: -1000;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#eead92, #6018dc);
+    clip-path: circle(30% at 70% 0%);
+}
+
+body::after{
+    z-index: -1000;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#fccf31, #f55555);
+    clip-path: circle(20% at 20% 80%);
 }
