--- a/src/components/UpcomingDaysForecast/UpcomingDaysForecast.module.css
+++ b/src/components/UpcomingDaysForecast/UpcomingDaysForecast.module.css
@@ -4,5 +4,5 @@
     -webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
     box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
     border-radius: var(--secondary-border-radius);
-    background-color: initial;
+    background-color: rgba(0, 0, 0, 0.02);
 }
